[components] Fix non-scroll container width on small screens

--- a/packages/@sanity/components/src/panes/styles/DefaultPane.css
+++ b/packages/@sanity/components/src/panes/styles/DefaultPane.css
@@ -356,7 +356,7 @@
     top: initial;
     left: initial;
     height: initial;
-    width: initial;
+    width: 100%;
     overflow: initial;
   }
 }
